feat: add navbar y calendar validations

--- a/src/components/Calendar/CalendarComponent.css
+++ b/src/components/Calendar/CalendarComponent.css
@@ -5,6 +5,10 @@
     align-items: center;
 }
 
+.main-container h2 {
+    margin: 5px;
+}
+
 .ReactModal__Content {
     height: 50%;
     width: 50%;
